# sosorted

./: .criterion-hypothesis.toml  .gitignore  .hypobench.toml  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  check_bitmask.rs  check_rotate.rs  check_rotate_generic.rs  check_rotate_u8.rs  difference_bench.txt  fix_generators.py  patch_difference.py  patch_union.py  recursion_check.rs  reproduce_bug.rs  reproduce_issue.rs  test_perf.rs  test_toolchain.yml  union_bench.txt  update_benches_mod.py
.cargo/: config.toml
.github/workflows/: benchmark.yml  cargo-test.yml
.jules/: bolt.md
benches/: deduplicate.rs  difference.rs  find_first_duplicate.rs  intersect.rs  intersect_ratio_v1.rs  roaring.rs  union.rs
benches/common/: baselines.rs  binary_datasets.rs  generators.rs  mod.rs  rng.rs  unary_datasets.rs
crates/bench-compare/: Cargo.toml  GITHUB_PAGES_SETUP.md  README.md
crates/bench-compare/gh-pages/: README.md  index.html
crates/bench-compare/gh-pages/reports/: index.html
crates/bench-compare/scripts/: update-gh-pages-index.sh
crates/bench-compare/src/: main.rs  parser_test.rs
dev/bench/: data.js
docs/superpowers/plans/: 2026-04-17-iter-custom-harness-api.md
infra/: .gitignore  README.md  cache-disk.tf  cloud-run.tf  iam.tf  instance-group.tf  instance-template.tf  main.py  main.tf  network.tf  outputs.tf  requirements.txt  scaler-cloud-function.tf.disabled  scheduler.tf  secrets.tf  startup-script.sh  terraform.tfvars.example  tfplan  variables.tf
infra/scaler/src/: main.py  requirements.txt
infra/scripts/: startup.sh
reports/: index.json  pr-101.json  pr-103.json  pr-109.json
scripts/: evaluate-perf-prs.sh
src/: deduplicate.rs  difference.rs  find_first_duplicate.rs  intersect.rs  intersect_bench_local.rs  intersect_lemire.rs  lib.rs  prefetch.rs  simd_element.rs  sorted_vec.rs  union.rs
src/roaring/: bitmap.rs  container.rs  iter.rs  mod.rs
tests/: intersect_regression.rs
