[package]
name = "sosorted"
version = "0.1.0"
edition = "2021"

description = "A set of methods to efficiently manipulated sorted arrays"
authors = ["Laurie Clark-Michalek <lclarkmichalek@gmail.com>"]
license = "MIT"

exclude = ['perf.*', 'target', 'Cargo.lock', '.sl']

[dev-dependencies]
anyhow = "1.0.68"
rand = { version = "0.8.5", features = ["small_rng"] }
bencher = "0.1.5"

[[bench]]
name = "find_first_duplicate"
harness = false

[[bench]]
name = "deduplicate"
harness = false

[[bench]]
name = "intersect"
harness = false