[package]
name = "sosorted"
version = "0.1.0"
edition = "2021"

description = "A set of methods to efficiently manipulated sorted arrays"
authors = ["Laurie Clark-Michalek <lclarkmichalek@gmail.com>"]
license = "MIT"

exclude = ['perf.*', 'target', 'Cargo.lock', '.sl']

[dev-dependencies]
anyhow = "1.0.100"
rand = { version = "0.9.2", features = ["small_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "find_first_duplicate"
harness = false

[[bench]]
name = "deduplicate"
harness = false

[[bench]]
name = "intersect"
harness = false

[[bench]]
name = "union"
harness = false