[workspace]
members = [".", "crates/bench-compare"]

[package]
name = "sosorted"
version = "0.2.0"
edition = "2021"

description = "A set of methods to efficiently manipulated sorted arrays"
authors = ["Laurie Clark-Michalek <lclarkmichalek@gmail.com>"]
license = "MIT"

exclude = ['perf.*', 'target', 'Cargo.lock', '.sl']

[lib]
bench = false

[dev-dependencies]
anyhow = "1.0.100"
rand = { version = "0.9.2", features = ["small_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "find_first_duplicate"
harness = false

[[bench]]
name = "deduplicate"
harness = false

[[bench]]
name = "intersect"
harness = false

[[bench]]
name = "union"
harness = false

[[bench]]
name = "difference"
harness = false

[[bench]]
name = "roaring"
harness = false