[package]
name = "bench-compare"
version = "0.1.0"
edition = "2021"
description = "A/B benchmark comparison with statistical hypothesis testing"
license = "MIT"

[[bin]]
name = "bench-compare"
path = "src/main.rs"
bench = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
statrs = "0.18"
chrono = { version = "0.4", features = ["serde"] }
